; ModuleID = '/home/carl/AnghaBench/git/extr_commit.c_set_commit_buffer.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit.c_set_commit_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.commit = type { i32 }
%struct.commit_buffer = type { i64, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_commit_buffer(%struct.repository* %0, %struct.commit* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.repository*, align 8
  %6 = alloca %struct.commit*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.commit_buffer*, align 8
  store %struct.repository* %0, %struct.repository** %5, align 8
  store %struct.commit* %1, %struct.commit** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load %struct.repository*, %struct.repository** %5, align 8
  %11 = getelementptr inbounds %struct.repository, %struct.repository* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.commit*, %struct.commit** %6, align 8
  %16 = call %struct.commit_buffer* @buffer_slab_at(i32 %14, %struct.commit* %15)
  store %struct.commit_buffer* %16, %struct.commit_buffer** %9, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = load %struct.commit_buffer*, %struct.commit_buffer** %9, align 8
  %19 = getelementptr inbounds %struct.commit_buffer, %struct.commit_buffer* %18, i32 0, i32 1
  store i8* %17, i8** %19, align 8
  %20 = load i64, i64* %8, align 8
  %21 = load %struct.commit_buffer*, %struct.commit_buffer** %9, align 8
  %22 = getelementptr inbounds %struct.commit_buffer, %struct.commit_buffer* %21, i32 0, i32 0
  store i64 %20, i64* %22, align 8
  ret void
}

declare dso_local %struct.commit_buffer* @buffer_slab_at(i32, %struct.commit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
